corrected viewport issue on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -72,8 +72,8 @@ header {
 }
 
 main {
-  padding: 4rem;
-  min-height: calc(100vh - 30px);
+  padding: 3rem;
+  min-height: calc(100vh - 33px);
 
   .icons {
     margin-top: 1rem;
